fix: update plugins for offline development completeness and CLAUDE.md compliance
agent-capability-kit:
- Enhance agent-authoring, command-authoring, plugin-authoring, skill-authoring skills
- Add .gitignore and validation checklists

git-workflow:
- SKILL.md: add `style` type, clarify Conventional Commits 1.0.0 spec rules
- GitHub reference: add .txt support, multi-directory discovery, template query param
- GitLab reference: correct precedence, 7 official variables, 12 quick actions

java:
- Improve language-syntax, language-design, performance-concurrency, dependency-versioning, test skills
- Add performance-patterns reference and maven-central improvements

jvm:
- Add collector-baselines, gc-logging, jfr-gc-events references
- Improve jvm-gc-diagnostics, jvm-runtime-diagnostics, jvm-tooling-workflows

kotlin:
- Add testing.md, gradle-dependencies-and-config.md, turbine-flow-testing.md references
- Improve coroutines-flows, language-patterns, kotlin-test skills

netty:
- Add .gitignore and LICENSE (MIT)
- Add backpressure.md reference
- Improve netty and reactor-netty skills

observability-assets:
- Add global-config.md, receiver-types.md, shared-types.md references
- Add field-config.md, panel-types.md, variables.md references
- Add experimental-features.md, histogram-details.md references
- Improve grafana-dashboards, alertmanager, prometheus-alert-rules, promql skills

reactor:
- Rename context-propagation.md to threadlocal-context-bridging.md
- Improve reactor-core, reactor-scheduling, reactor-sinks, reactor-testing skills

General:
- CLAUDE.md review checklist enforcement
- All skills follow coding-related skill rules (code/templates over prose)