@@ -1,31 +1,38 @@
 ---
 name: java-performance-concurrency
 description: >-
-  Use this skill when the user asks to "optimize Java performance", "analyze concurrency design", "use virtual threads", "reduce allocation pressure", "profile Java code", or needs guidance on Java performance and concurrency tradeoffs.
+  Review Java performance and concurrency decisions with evidence-driven profiling,
+  classify bottlenecks as CPU, I/O, contention, or allocation,
+  evaluate virtual-thread fit, and recommend the smallest measured change.
+  Use when the user asks to optimize Java performance, analyze concurrency design,
+  use virtual threads, reduce allocation pressure, profile Java code,
+  or needs guidance on Java performance and concurrency tradeoffs.
 ---
 
 # Java Performance Concurrency
 
-## Overview
+Review Java performance and concurrency decisions with emphasis on evidence, workload shape, and modern JVM capabilities. The common case is not heroic optimization; it is identifying whether the bottleneck is CPU, blocking I/O, contention, or allocation churn, then making the smallest measured change that fits that shape.
 
-Use this skill to review Java performance and concurrency decisions with emphasis on evidence, workload shape, and modern JVM capabilities. The common case is not heroic optimization; it is identifying whether the bottleneck is CPU, blocking I/O, contention, or allocation churn, then making the smallest measured change that fits that shape. Prefer profiling and observable workload evidence over intuition.
+## Operating rules
 
-## Use This Skill When
+- MUST treat profiling as the source of truth.
+- MUST review the concurrency model before recommending primitives.
+- MUST distinguish CPU-bound, I/O-bound, and mixed workloads.
+- MUST NOT recommend virtual threads as a blanket upgrade.
+- MUST keep virtual-thread caveats aligned with the actual Java baseline.
+- SHOULD explain the likely cost of synchronization, allocation churn, and context switching.
+- SHOULD prefer simple concurrency models that fit the workload.
+- SHOULD treat `ScopedValue` as a version-sensitive alternative to broad `ThreadLocal` usage when immutable request context is the real problem; it is preview on Java 21-24 and finalized in Java 25.
 
-- You are investigating Java latency or throughput problems.
-- You are evaluating lock contention, allocation pressure, or virtual-thread fit.
-- You need version-aware guidance for virtual-thread limits on different Java baselines.
-- You need a default profiling or concurrency-review workflow before optimizing.
-- Do not use this skill when the main task is runtime incident capture from a live JVM rather than performance interpretation.
-
-## Common-Case Workflow
+## Procedure
 
 1. Read the target code, hot path, and the nearest benchmark, trace, or diagnostic evidence.
 2. Identify whether the issue is latency, throughput, contention, or allocation.
 3. Profile or interpret measured evidence before recommending a concurrency or optimization change.
-4. Prefer the smallest measured change that addresses the observed bottleneck.
+4. Classify the workload shape before recommending any specific primitive.
+5. Prefer the smallest measured change that addresses the observed bottleneck.
 
-## First Runnable Commands or Code Shape
+## First runnable commands
 
 Start with a profiler-ready JVM launch shape:
 
@@ -33,13 +40,88 @@ Start with a profiler-ready JVM launch shape:
 java -XX:StartFlightRecording=duration=60s,filename=profile.jfr,settings=profile -jar app.jar
 ```
 
-*Applies when:* you need a first real profile for latency, throughput, allocation, or lock analysis.
+Use when: you need a first real profile for latency, throughput, allocation, or lock analysis.
 
-## Ready-to-Adapt Templates
+## Ready-to-adapt templates
 
-These templates stay in `SKILL.md` because performance review is part of the skill's primary purpose and the common path should be usable without opening references.
+### JMH microbenchmark skeleton
 
-Blocking-I/O review template:
+```java
+import java.util.concurrent.TimeUnit;
+
+import org.openjdk.jmh.annotations.Benchmark;
+import org.openjdk.jmh.annotations.BenchmarkMode;
+import org.openjdk.jmh.annotations.Mode;
+import org.openjdk.jmh.annotations.OutputTimeUnit;
+import org.openjdk.jmh.annotations.Scope;
+import org.openjdk.jmh.annotations.State;
+import org.openjdk.jmh.annotations.Warmup;
+import org.openjdk.jmh.annotations.Measurement;
+
+@State(Scope.Benchmark)
+@BenchmarkMode(Mode.Throughput)
+@OutputTimeUnit(TimeUnit.SECONDS)
+@Warmup(iterations = 3, time = 1)
+@Measurement(iterations = 5, time = 1)
+public class ParserBenchmark {
+
+    private final byte[] payload = "key=value,name=test".getBytes();
+
+    @Benchmark
+    public Result parse() {
+        return Parser.parse(payload);
+    }
+}
+```
+
+Maven dependency:
+
+```xml
+<dependency>
+  <groupId>org.openjdk.jmh</groupId>
+  <artifactId>jmh-core</artifactId>
+  <version>${verifiedVersion}</version>
+</dependency>
+<dependency>
+  <groupId>org.openjdk.jmh</groupId>
+  <artifactId>jmh-generator-annprocess</artifactId>
+  <version>${verifiedVersion}</version>
+  <scope>provided</scope>
+</dependency>
+```
+
+Gradle Groovy DSL:
+
+```groovy
+def jmhVersion = "${verifiedVersion}"
+dependencies {
+    implementation "org.openjdk.jmh:jmh-core:$jmhVersion"
+    annotationProcessor "org.openjdk.jmh:jmh-generator-annprocess:$jmhVersion"
+}
+```
+
+Gradle Kotlin DSL:
+
+```kotlin
+val jmhVersion = "${verifiedVersion}"
+dependencies {
+    implementation("org.openjdk.jmh:jmh-core:$jmhVersion")
+    annotationProcessor("org.openjdk.jmh:jmh-generator-annprocess:$jmhVersion")
+}
+```
+
+### GC selection decision tree
+
+| Collector | Flag | Best for | Avoid when |
+| --- | --- | --- | --- |
+| G1 (default) | `-XX:+UseG1GC` | General-purpose, balanced latency/throughput | Sub-millisecond pause requirements |
+| ZGC | `-XX:+UseZGC` | Low-latency, large heaps (JDK 15+ production-ready) | Very small heaps, JDK 11 |
+| Shenandoah | `-XX:+UseShenandoahGC` | Low-latency alternative to ZGC | Not available in all JDK distributions |
+| Parallel | `-XX:+UseParallelGC` | Batch/throughput-focused, max throughput | Latency-sensitive services |
+
+Rule: do not change the collector without allocation and pause evidence from JFR or GC logs.
+
+### Blocking-I/O review
 
 ```yaml
 workload: request-per-thread service with blocking network or disk calls
@@ -57,15 +139,17 @@ not_first:
 ```
 
 ```java
+import java.io.IOException;
+import java.net.http.HttpResponse;
+import java.net.http.HttpResponse.BodyHandlers;
+
 Response load(UserId id) throws IOException {
     HttpResponse<String> response = httpClient.send(requestFor(id), BodyHandlers.ofString());
     return mapper.readValue(response.body(), Response.class);
 }
 ```
 
-Use when: the service spends more time waiting on network, disk, or external systems than computing locally.
-
-Allocation-pressure review template:
+### Allocation-pressure review
 
 ```yaml
 workload: allocation-heavy request or batch path
@@ -86,6 +170,8 @@ not_first:
 ```
 
 ```java
+import java.util.List;
+
 List<Result> parse(List<String> lines) {
     return lines.stream()
         .map(line -> line.trim())
@@ -96,19 +182,28 @@ List<Result> parse(List<String> lines) {
 }
 ```
 
-Use when: evidence points to churn and GC pressure caused by parsing, serialization, or intermediate objects rather than lock contention.
-
-Virtual-thread evaluation `(JDK 21+)`:
+### Virtual-thread evaluation `(JDK 21+)`
 
 ```java
+import java.util.concurrent.Executors;
+
 try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
     executor.submit(() -> service.handle(request));
 }
 ```
 
-Use when: the workload is blocking-I/O, request concurrency matters, and the baseline supports virtual threads cleanly.
+### Synchronization primitive selection
 
-CPU-bound or pinning-risk review template:
+| Primitive | Use when | Avoid when |
+| --- | --- | --- |
+| `synchronized` | Simple mutual exclusion, low contention | Virtual threads on JDK 21-23 (pinning risk) |
+| `ReentrantLock` | Need `tryLock()`, timed lock, or interruptible lock | Simple cases where `synchronized` suffices |
+| `ReadWriteLock` | Many readers, few writers | Write-heavy or low-contention workloads |
+| `AtomicInteger` / `AtomicReference` | Single-variable atomic updates | Multi-variable compound actions |
+| `Semaphore` | Limiting concurrent access to a resource | Simple mutual exclusion (use `synchronized` or `ReentrantLock`) |
+| `CountDownLatch` | One-time event waiting for N tasks to complete | Repeated reset needed (use `CyclicBarrier`) |
+
+### CPU-bound or pinning-risk review
 
 ```yaml
 workload: CPU-bound or mixed CPU plus blocking path
@@ -134,55 +229,56 @@ synchronized Result parse(byte[] payload) {
 }
 ```
 
-Use when: someone proposes virtual threads or concurrency changes as a blanket upgrade while the hot path is still CPU-bound or pinning-sensitive.
+### Heap dump capture
 
-## Validate the Result
+On out-of-memory:
 
-Validate the common case with these checks:
+```bash
+java -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp/heap.hprof -jar app.jar
+```
 
-- the recommendation is grounded in a measured hot path or captured profile
-- the bottleneck is classified as CPU, I/O, contention, or allocation rather than vaguely "performance"
-- virtual threads are recommended only for workloads that actually fit them
-- the Java baseline is known before version-sensitive virtual-thread caveats are discussed
-- allocation or synchronization fixes are tied to observed evidence, not generic advice
-- the review template records workload shape, evidence, first change, and what is intentionally not first
+On demand:
 
-## Deep References
+```bash
+jcmd <pid> GC.heap_dump /tmp/heap.hprof
+```
 
-| If the blocker is... | Read... |
+Analyze with Eclipse MAT or `jhsdb`:
+
+```bash
+jhsdb hat dump --heap-dump-file /tmp/heap.hprof
+```
+
+## Edge cases
+
+- If the main task is runtime incident capture from a live JVM rather than performance interpretation, state that live incident triage is outside this skill's scope.
+- If the question is about public API or type-modeling decisions, that is outside this skill's scope.
+- If the question is about JUnit structure or test-first workflow, that is outside this skill's scope.
+- If no profiling evidence exists, collect evidence before recommending any change.
+- If someone proposes virtual threads for CPU-bound work, reject the recommendation and point to the hot computation path first.
+- If discussing `synchronized` pinning, state whether the target runtime is Java 21-23 or Java 24+ before giving version-specific advice.
+- Standard JDK tool selection or packaging workflows are outside this skill's scope.
+
+## Output contract
+
+Return:
+
+1. The classified bottleneck type (CPU, I/O, contention, or allocation).
+2. The measured evidence that supports the classification.
+3. The recommended change tied to that evidence.
+4. What was intentionally deferred and why.
+
+## Support-file pointers
+
+| If the blocker is... | Open... |
 | --- | --- |
-| virtual-thread fit, limits, and review questions | `./references/virtual-threads.md` |
-| additional performance-review heuristics | `./references/performance-patterns.md` |
+| virtual-thread fit, limits, ScopedValue usage, pinning diagnosis | [`virtual-threads.md`](./references/virtual-threads.md) |
+| additional profiling commands, JFR attach patterns, evidence interpretation heuristics | [`performance-patterns.md`](./references/performance-patterns.md) |
 
-## Invariants
+## Gotchas
 
-- MUST treat profiling as the source of truth.
-- MUST review the concurrency model before recommending primitives.
-- MUST distinguish CPU-bound, I/O-bound, and mixed workloads.
-- MUST NOT recommend virtual threads as a blanket upgrade.
-- MUST keep virtual-thread caveats aligned with the actual Java baseline.
-- SHOULD explain the likely cost of synchronization, allocation churn, and context switching.
-- SHOULD treat `ScopedValue` as a version-sensitive alternative to broad `ThreadLocal` usage when immutable request context is the real problem; it is preview on Java 21-24 and finalized in Java 25.
-- SHOULD prefer simple concurrency models that fit the workload.
-
-## Common Pitfalls
-
-| Anti-pattern | Why it fails | Correct move |
-| --- | --- | --- |
-| optimizing before profiling | changes target the wrong bottleneck | collect or read evidence first |
-| recommending virtual threads for CPU-bound work | thread model does not solve CPU saturation | fix the hot computation path first |
-| repeating pre-JDK-24 pinning advice on a newer baseline | the recommendation becomes stale or wrong | state whether the target runtime is Java 21-23 or Java 24+ before warning about `synchronized` pinning |
-| talking about throughput and latency as if they were the same goal | the recommended tradeoff becomes incoherent | state the dominant workload goal explicitly |
-| blaming GC for allocation-heavy code without checking the hot path | the application-level churn remains unfixed | reduce churn first, then revisit GC only if needed |
-
-## Scope Boundaries
-
-- Activate this skill for:
-  - profiling strategy and bottleneck interpretation
-  - concurrency model tradeoffs
-  - virtual-thread evaluation
-- Do not use this skill as the primary source for:
-  - public API or type-modeling decisions
-  - JUnit structure or test-first workflow
-  - runtime incident triage from live JVM evidence
-  - standard JDK tool selection or packaging workflows
+- Do not optimize before profiling.
+- Do not recommend virtual threads for CPU-bound work.
+- Do not repeat pre-JDK-24 pinning advice on a newer baseline without stating the version range.
+- Do not talk about throughput and latency as if they were the same goal.
+- Do not blame GC for allocation-heavy code without checking the hot path first.
